# troika

./: .gitignore  CMakeLists.txt  Makefile  main.c
src/: ftroika.h
